<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eNaslovna"
            android:layout_width="wrap_content"
            android:layout_height="98dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/dPreporuci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonPreporuci" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eNaziv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/textViewNazivK" />

        <TextView
            android:id="@+id/eAutor"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/textViewNazivA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eBrojStranica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tekstBrojStranica" />

            <TextView
                android:id="@+id/eDatumObjavljivanja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tekstDatum" />

        </LinearLayout>

        <TextView
            android:id="@+id/eOpis"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/tekstOpis" />

    </LinearLayout>
</LinearLayout>