<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tekstPretraga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTekstPretraga"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/dPretraga"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/okrugli_dugmic"
            android:text="@string/buttonPretraga" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dDodajKategoriju"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/okrugli_dugmic"
            android:enabled="false"
            android:text="@string/buttonDodajKategoriju" />

        <Button
            android:id="@+id/dDodajKnjigu"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/okrugli_dugmic"
            android:text="@string/buttonDodajKnjigu" />

    </LinearLayout>

    <Button
        android:id="@+id/dDodajOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="dodaj knjigu online" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dKategorije"
            android:backgroundTint="@color/element_tekst"
            android:textColor="@color/element_margine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonKategorije" />

        <Button
            android:id="@+id/dAutori"
            android:backgroundTint="@color/element_tekst"
            android:textColor="@color/element_margine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonAutori" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaKategorija"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>