<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tekstUpit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/buttonUpisiKnjigu" />

        <Button
            android:id="@+id/dRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonPretraga" />
    </LinearLayout>

    <Spinner
        android:id="@+id/sRezultati"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dPovratak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/element_linije"
            android:text="@string/buttonPovratak" />

        <Button
            android:id="@+id/dAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDodajKnjigu" />
    </LinearLayout>

</LinearLayout>